# armillary

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  justfile  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/flux-cli/: Cargo.toml
crates/flux-cli/src/: main.rs  pipeline.rs  server.rs  snippet.rs  udf.rs
crates/flux-connectors/: Cargo.toml
crates/flux-connectors/src/: config.rs  file_sink.rs  file_source.rs  lib.rs  postgres_sink.rs  postgres_source.rs  registry.rs  rest_api_source.rs  stdout_sink.rs
crates/flux-datafusion/: Cargo.toml
crates/flux-datafusion/src/: column_stats.rs  environment.rs  error.rs  executor.rs  incremental_coordinator.rs  lib.rs  output_cache.rs  preview.rs  result.rs  run.rs  run_store.rs  storage.rs  test_assertion.rs
crates/flux-datafusion/tests/: cross_layer_integration_test.rs  environment_test.rs  executor_test.rs  incremental_test.rs  pipeline_integration_test.rs  preview_test.rs
crates/flux-engine/: Cargo.toml
crates/flux-secrets/: Cargo.toml
crates/flux-server/: Cargo.toml
crates/flux-server/src/: lib.rs  lockfile.rs  port.rs  state.rs  static_files.rs  ws.rs
crates/flux-server/src/api/: environments.rs  mod.rs  pipelines.rs  plugins.rs  preview.rs  secrets.rs
crates/flux-server/tests/: connector_api.rs  environment_api.rs  health_api.rs  pipeline_api.rs  plugin_api.rs  preview_api.rs  secret_api.rs  ws_api.rs
crates/flux-tray/: Cargo.toml
docs/: pipeline-format.md  reusable-pipeline-snippets.md  reusable-sql-udfs.md
docs/plugins/: using-plugins.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
test-pipelines/: .env.example  README.md  cross-source-analytics.json  openboard-order-summary.json  pagila-revenue-by-category.json
(+66 files in other folders)
